2014-01-04  kitone  <kitone@gna.org>

	* plugins/subtitleformats/advancedsubstationalpha/dialog-advancedsubstationalpha-preferences.ui:
	* plugins/subtitleformats/substationalpha/dialog-substationalpha-preferences.ui:
	Fix: port to gtk3.

2014-01-04  kitone  <kitone@gna.org>

	* src/gui/cellrenderercustom.h:
	Fix: call finish_editing in editing_done.

2014-01-04  kitone  <kitone@gna.org>

	* autogen.sh:
	* configure.ac:
	* configure.in:
	* plugins/actions/about/Makefile.am:
	* plugins/actions/adjusttime/Makefile.am:
	* plugins/actions/applytranslation/Makefile.am:
	* plugins/actions/bestfit/Makefile.am:
	* plugins/actions/changeframerate/Makefile.am:
	* plugins/actions/clipboard/Makefile.am:
	* plugins/actions/combinesubtitles/Makefile.am:
	* plugins/actions/command/Makefile.am:
	* plugins/actions/configurekeyboardshortcuts/Makefile.am:
	* plugins/actions/dialoguize/Makefile.am:
	* plugins/actions/documentmanagement/Makefile.am:
	* plugins/actions/documentsnavigation/Makefile.am:
	* plugins/actions/duplicatesubtitle/Makefile.am:
	* plugins/actions/editcell/Makefile.am:
	* plugins/actions/errorchecking/Makefile.am:
	* plugins/actions/extendlength/Makefile.am:
	* plugins/actions/externalvideoplayer/Makefile.am:
	* plugins/actions/findandreplace/Makefile.am:
	* plugins/actions/insertsubtitle/Makefile.am:
	* plugins/actions/insertsubtitlefromkeyframe/Makefile.am:
	* plugins/actions/italicize/Makefile.am:
	* plugins/actions/joindocument/Makefile.am:
	* plugins/actions/keyframesmanagement/Makefile.am:
	* plugins/actions/minimizeduration/Makefile.am:
	* plugins/actions/moveafterprecedingsubtitle/Makefile.am:
	* plugins/actions/movesubtitles/Makefile.am:
	* plugins/actions/plaintext/Makefile.am:
	* plugins/actions/preferences/Makefile.am:
	* plugins/actions/removesubtitle/Makefile.am:
	* plugins/actions/reversetextandtranslation/Makefile.am:
	* plugins/actions/scalesubtitles/Makefile.am:
	* plugins/actions/selection/Makefile.am: